# internal/api/gen/oas_validators_gen.go
@@ -67,6 +67,29 @@ func (s *ApiKeyCreateRequest) Validate() error {
 	return nil
 }
 
+func (s *BotBulkProvisionResponse) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.JobIds == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "jobIds",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *BotCreateRequest) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
@@ -123,6 +146,17 @@ func (s *BotCreateResponse) Validate() error {
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
 			Name:  "failedIndexes",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if s.JobIds == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "jobIds",
 			Error: err,
 		})
 	}
